k8s_config/console/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wigle-console
  namespace: wigle
spec:
  selector:
    app: wigle-console
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
